Fix checkbox filters spacing problems. Need to use more divs in future here.

--- a/themes/bootstrap3/less/components/advanced-search.less
+++ b/themes/bootstrap3/less/components/advanced-search.less
@@ -85,13 +85,11 @@
     padding-bottom: 1rem;
   }
   .solr-facets,
-  .summon-facets,
-  .summon-facets .checkbox-filter {
+  .summon-facets {
     float: none;
     width: auto;
+    margin-top: 1rem;
   }
-  .solr-facets,
-  .summon-facets { margin-top: 1rem; }
   .summon-facets .facet-fieldset {
     float: left;
     width: 50%;
